trunk/Archive2/0b/80d5f2e55fc558/output
main.cpp:15:9: error: static_assert failed ""
        static_assert(X<int*> == 0x5, "");
        ^             ~~~~~~~~~~~~~~
1 error generated.
